release/1.0.4/docs/UniFiTooling.md
---
Module Name: UniFiTooling
Module Guid: 7fff91a0-02eb-4df2-84d5-c7d3cd7f7a5d
Download Help Link: https://github.com/jhochwald/UniFiTooling/release/UniFiTooling/docs/UniFiTooling.md
Help Version: 1.0.4
Locale: en-US
---

# UniFiTooling Module
## Description
Ubiquiti UniFi Security Gateway automation via the API of the Ubiquiti UniFi Controller

## UniFiTooling Cmdlets
### [Get-UnifiFirewallGroupBody](Get-UnifiFirewallGroupBody.md)
Build a Body for Set-UnifiFirewallGroup call

### [Get-UnifiFirewallGroups](Get-UnifiFirewallGroups.md)
Get a List Firewall Groups via the API of the UniFi Controller

### [Get-UnifiNetworkDetails](Get-UnifiNetworkDetails.md)
Get the details about one network via the API of the UniFi Controller

### [Get-UnifiNetworkList](Get-UnifiNetworkList.md)
Get a List Networks via the API of the UniFi Controller

### [Invoke-UniFiApiLogin](Invoke-UniFiApiLogin.md)
Login to API of the UniFi Controller

### [Invoke-UniFiApiLogout](Invoke-UniFiApiLogout.md)
Logout from the API of the UniFi Controller

### [Invoke-UniFiCidrWorkaround](Invoke-UniFiCidrWorkaround.md)
IPv4 CIDR Workaround for UBNT USG Firewall Rules

### [Invoke-UniFiCidrWorkaroundV6](Invoke-UniFiCidrWorkaroundV6.md)
IPv6 CIDR Workaround for UBNT USG Firewall Rules

### [Set-UnifiFirewallGroup](Set-UnifiFirewallGroup.md)
Get a given Firewall Group via the API of the UniFi Controller

### [Set-UnifiNetworkDetails](Set-UnifiNetworkDetails.md)
Modifies one network via the API of the UniFi Controller


